# APIMystery

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  api-mystery.db  docker-compose.yml  index.html  pyproject.toml  requirements.txt
ch0/: load_data.py  main.py
ch0/auth/: auth_bearer.py  auth_handler.py
ch0/models/: __init__.py  engine.py  fitnes_town.py  get_fit_now.py  person.py  police.py  social_media.py
ch0/routers/: __init__.py  auth.py  cakebook.py  get_fit_now.py  police.py
ch0/schema/: __init__.py  auth.py  cakebook.py  get_fit_now.py  person.py  police.py
ch0/test/: cakebook.rest  get_fit_now.rest  person.rest  police.rest
landing/: index.html
