[tool.poetry]
name = "apimystery-ch0"
version = "0.0.1"
description = "Mystery game and API trainer"
authors = ["SnoweTiger <snowetiger@gmail.com>"]
license = "GPLv2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
bcrypt = "^4.1.3"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
